@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

package Model as ModelPackage <<Rectangle>> {

'==========================
' Interfaces
'==========================
class "<<interface>>\nReadOnlyProjectBook" as ReadOnlyProjectBook
class "<<interface>>\nReadOnlyUserPrefs" as ReadOnlyUserPrefs
class "<<interface>>\nModel" as Model

'==========================
' Core Model Classes
'==========================
class ProjectBook
class ModelManager
class UserPrefs

'==========================
' Person-related Classes
'==========================
class UniquePersonList

class Person {
    - Name name
    - Phone phone
    - Email email
    - Telegram telegram
    - Set<Tag> tags
    - List<Remark> remarks
    - List<Project> projects
}

class Volunteer

class TeamMember {
    - Committee committee
}

class OrgMember {
    - Organisation organisation
}

'==========================
' Project-related Classes
'==========================
class UniqueProjectList

class Project {
    - ProjectName name
    - Description description
    - LocalDateTime createdAt
    - LocalDateTime updatedAt
    - List<Membership> memberships
}
}

'==========================
' Generalization / Interfaces
'==========================
ProjectBook .up.|> ReadOnlyProjectBook
ModelManager .up.|> Model
UserPrefs .up.|> ReadOnlyUserPrefs

'==========================
' ModelManager Relationships
'==========================
Model .right.> ReadOnlyUserPrefs
Model .left.> ReadOnlyProjectBook
ModelManager -left-> "1" ProjectBook
ModelManager -right-> "1" UserPrefs

'==========================
' ProjectBook Composition
'==========================
ProjectBook *--> "1" UniquePersonList
ProjectBook *--> "1" UniqueProjectList

UniquePersonList --> "~* all" Person
UniqueProjectList --> "~* all" Project

'==========================
' Person Hierarchy
'==========================
Person <|-- Volunteer
Person <|-- TeamMember
Person <|-- OrgMember

'==========================
' Filtered Lists (for GUI)
'==========================
ModelManager --> "~* filtered" Person
ModelManager --> "~* filtered" Project
@enduml
